# pytest-testing

hexlet_pytest/: .coverage  pyproject.toml
hexlet_pytest/hexlet_pytest/: example.py
hexlet_pytest/tests/: test_fixture.py  test_stack.py
