[tool.poetry]
name = "hexlet_pytest"
version = "0.1.0"
description = ""
authors = ["shlegeldavid <shlegeldavid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
funcy = "^2.0"
pytest-cov = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
